book draft 4.4 time-stamped versions in progress

--- a/000_0-sds-3-x-projects/student-project-01_group-TheTwoCultures/01b_show_data.html
+++ b/000_0-sds-3-x-projects/student-project-01_group-TheTwoCultures/01b_show_data.html
@@ -1481,6 +1481,15 @@ only showing top 10 rows
 <td>familjeliv</td>
 <td>familjeliv-allmanna-ekonomi.xml</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
