--- a/000_0-sds-3-x-projects/student-project-01_group-TheTwoCultures/03_word2vec.html
+++ b/000_0-sds-3-x-projects/student-project-01_group-TheTwoCultures/03_word2vec.html
@@ -1532,6 +1532,15 @@ corpus_id - the corpus from which the data was gathered</p></li>
 <td>familjeliv</td>
 <td>familjeliv-sexsamlevnad.xml</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1806,11 +1815,7 @@ sure to save the result.</p>
 |1.0|1.0       |[0.0032969395487662213,0.9967030604512337]|
 |1.0|1.0       |[0.008645133666934816,0.9913548663330651] |
 |1.0|1.0       |[4.1492836709996625E-5,0.9999585071632902]|
-|0.0|1.0       |[0.43037903982909986,0.5696209601709002]  |
-|0.0|1.0       |[0.43707897641990706,0.562921023580093]   |
-|1.0|1.0       |[0.29846393214228517,0.7015360678577148]  |
-+---+----------+------------------------------------------+
-only showing top 30 rows
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
