--- a/000_0-sds-3-x-projects/student-project-02_group-LiUUmeaSceneGraphMotifs/01_SceneGraphMotifs.html
+++ b/000_0-sds-3-x-projects/student-project-02_group-LiUUmeaSceneGraphMotifs/01_SceneGraphMotifs.html
@@ -1738,6 +1738,13 @@ the relation ‘next-to’ with objects of type ‘banana’?”.</p></li>
 <td>tablecloth</td>
 <td>straw</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1830,6 +1837,13 @@ the relation ‘next-to’ with objects of type ‘banana’?”.</p></li>
 <td>socks</td>
 <td>shorts</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1908,6 +1922,10 @@ image.</p></li>
 <td>2345634</td>
 <td>77.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1983,6 +2001,10 @@ Relations: 3795907
 <tr class="even">
 <td>2211880</td>
 <td>78.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2064,6 +2086,11 @@ Relations: 3795907
 <td>meat</td>
 <td>delicious</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2129,6 +2156,10 @@ Relations: 3795907
 <td>wood</td>
 <td>15024.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2188,6 +2219,10 @@ Relations: 3795907
 <tr class="even">
 <td>wood</td>
 <td>15024.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2263,6 +2298,10 @@ times).</p></li>
 <td>sign</td>
 <td>16933.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2321,6 +2360,10 @@ times).</p></li>
 <tr class="even">
 <td>dvd players</td>
 <td>1.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2415,6 +2458,11 @@ graphs?”</p></li>
 <td>shirt</td>
 <td>9743.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2496,6 +2544,12 @@ graphs?”</p></li>
 <td>to the right of</td>
 <td>leg</td>
 <td>7839.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2633,6 +2687,12 @@ non-spatial relations.</p></li>
 <td>wearing</td>
 <td>shirt</td>
 <td>1025.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2920,6 +2980,12 @@ rank_graph_val: org.graphframes.GraphFrame = GraphFrame(v:[id: string, graph_id:
 <td>symbol</td>
 <td>0.6895636548991143</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -3015,6 +3081,12 @@ rank_graph_val: org.graphframes.GraphFrame = GraphFrame(v:[id: string, graph_id:
 <td>plate</td>
 <td>9.681869663093153</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -3098,6 +3170,12 @@ rank_graph_val: org.graphframes.GraphFrame = GraphFrame(v:[id: string, graph_id:
 <td>symbol</td>
 <td>0.6895636548991145</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -3179,6 +3257,12 @@ rank_graph_val: org.graphframes.GraphFrame = GraphFrame(v:[id: string, graph_id:
 <td>1227288</td>
 <td>plate</td>
 <td>9.681869663093154</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -3292,6 +3376,10 @@ graph_pagerank_sums_objects: org.apache.spark.sql.DataFrame = [object_name: stri
 <td>sign</td>
 <td>15060.491633887743</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -3362,6 +3450,10 @@ information gain.</p></li>
 <td>crust</td>
 <td>718.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -3425,6 +3517,10 @@ information gain.</p></li>
 <tr class="even">
 <td>wrist</td>
 <td>1485.3421574719791</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -3507,6 +3603,12 @@ information gain.</p></li>
 <td>101.22443604725292</td>
 <td>60.0</td>
 <td>1.687073934120882</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -3600,6 +3702,12 @@ occurrences.w sort by name so that we can perform a join.</p></li>
 <td>16933.0</td>
 <td>0.8894166204386549</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -3671,6 +3779,10 @@ objects like <code class="docutils literal notranslate"><span class="pre">sky</s
 <td>2378757</td>
 <td>13.663360677063004</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -3731,6 +3843,10 @@ objects like <code class="docutils literal notranslate"><span class="pre">sky</s
 <td>2401071</td>
 <td>36.80201945431569</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -3789,6 +3905,10 @@ objects like <code class="docutils literal notranslate"><span class="pre">sky</s
 <tr class="even">
 <td>2335601</td>
 <td>88.84935779270842</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -3891,6 +4011,9 @@ attributes.</p></li>
 <tr class="even">
 <td>shower curtain</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -3969,6 +4092,11 @@ attributes.</p></li>
 <td>socks</td>
 <td>shorts</td>
 <td>to the left of</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -4064,6 +4192,11 @@ attributes.</p></li>
 <td>shorts</td>
 <td>to the left of</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -4119,6 +4252,9 @@ attributes.</p></li>
 </tr>
 <tr class="even">
 <td>wheels</td>
+</tr>
+<tr class="odd">
+<td>...</td>
 </tr>
 </tbody>
 </table></div></div>
@@ -4189,6 +4325,11 @@ attributes.</p></li>
 <td>socks</td>
 <td>shorts</td>
 <td>to the left of</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -4275,6 +4416,10 @@ categories</em> (image classes).</p></li>
 <td>8.76173328385e11</td>
 <td>1.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -4342,6 +4487,10 @@ the attributes.</p>
 <td>television</td>
 <td>0.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -4401,6 +4550,10 @@ the attributes.</p>
 <tr class="even">
 <td>1.700807049221e12</td>
 <td>1.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
