--- a/000_0-sds-3-x-projects/student-project-04_group-DistributedLinearAlgebra/02_CollaborativeFiltering.html
+++ b/000_0-sds-3-x-projects/student-project-04_group-DistributedLinearAlgebra/02_CollaborativeFiltering.html
@@ -1556,6 +1556,9 @@ range. From 1 to over 350 000.</p>
 <tr class="even">
 <td>4147.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1603,6 +1606,9 @@ display(df_raw.select(&quot;play_count&quot;).filter($&quot;play_count&quot;&lt;
 </tr>
 <tr class="even">
 <td>212.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1692,6 +1698,9 @@ artist_data_raw: org.apache.spark.sql.DataFrame = [artistID: int, unique_users: 
 <tr class="even">
 <td>1378.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1740,6 +1749,9 @@ display(artist_data_raw.select(&quot;total_plays_artist&quot;).filter($&quot;tot
 <tr class="even">
 <td>2383.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1787,6 +1799,9 @@ display(artist_data_raw.select(&quot;total_plays_artist&quot;).filter($&quot;tot
 </tr>
 <tr class="even">
 <td>3.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1864,6 +1879,9 @@ user_data_raw: org.apache.spark.sql.DataFrame = [userID: int, unique_artists: bi
 </tr>
 <tr class="even">
 <td>69685.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2041,6 +2059,9 @@ sparsity_new: Float = 0.9972172
 <tr class="even">
 <td>298.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2089,6 +2110,9 @@ sparsity_new: Float = 0.9972172
 <tr class="even">
 <td>45666.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2136,6 +2160,9 @@ sparsity_new: Float = 0.9972172
 </tr>
 <tr class="even">
 <td>37.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2208,6 +2235,11 @@ listeners (as expected) as illustrated in the figure below.</p>
 <td>1339.0</td>
 <td>37.0</td>
 <td>45666.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2293,6 +2325,9 @@ scaling.</p>
 <tr class="even">
 <td>16.792855623746664</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2340,6 +2375,9 @@ scaling.</p>
 </tr>
 <tr class="even">
 <td>14.628738838327793</td>
+</tr>
+<tr class="odd">
+<td>...</td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2574,17 +2612,7 @@ rank=100, alpha=5.0, lambda=0.1, mean_rank=13.031898
 rank=150, alpha=5.0, lambda=0.1, mean_rank=13.128654
 rank=10, alpha=5.0, lambda=1.0, mean_rank=10.496872
 rank=50, alpha=5.0, lambda=1.0, mean_rank=10.822062
-rank=100, alpha=5.0, lambda=1.0, mean_rank=10.659593
-rank=150, alpha=5.0, lambda=1.0, mean_rank=10.679214
-rank=10, alpha=5.0, lambda=2.0, mean_rank=10.021061
-rank=50, alpha=5.0, lambda=2.0, mean_rank=9.592773
-rank=100, alpha=5.0, lambda=2.0, mean_rank=9.313808
-rank=150, alpha=5.0, lambda=2.0, mean_rank=9.194027
-import org.apache.spark.ml.recommendation.ALS
-numIter: Int = 10
-ranks: List[Int] = List(10, 50, 100, 150)
-lambdas: List[Double] = List(0.1, 1.0, 2.0)
-alphas: List[Double] = List(0.5, 1.0, 5.0)
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
