--- a/000_0-sds-3-x-projects/student-project-08_group-DistributedEnsemble/development/loading_data.html
+++ b/000_0-sds-3-x-projects/student-project-08_group-DistributedEnsemble/development/loading_data.html
@@ -1550,6 +1550,16 @@ European Modeling and Simulation Symposium-EMSS, Larnaca, Cyprus. 2016
 <td>40348.79</td>
 <td>0.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
