--- a/000_0-sds-3-x-projects/student-project-09_group-TopicModeling/05_Classification.html
+++ b/000_0-sds-3-x-projects/student-project-09_group-TopicModeling/05_Classification.html
@@ -1452,6 +1452,7 @@ df_feats: org.apache.spark.sql.DataFrame = [label: string, f1: double ... 9 more
 <th>f7</th>
 <th>f8</th>
 <th>f9</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1466,6 +1467,7 @@ df_feats: org.apache.spark.sql.DataFrame = [label: string, f1: double ... 9 more
 <td>4.939647651525903e-2</td>
 <td>3.7797393556810284e-2</td>
 <td>9.34690329855576e-2</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>asia</td>
@@ -1478,6 +1480,7 @@ df_feats: org.apache.spark.sql.DataFrame = [label: string, f1: double ... 9 more
 <td>4.296150782301983e-2</td>
 <td>4.282406351061127e-2</td>
 <td>2.3781909577460358e-2</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>northamerica</td>
@@ -1490,6 +1493,7 @@ df_feats: org.apache.spark.sql.DataFrame = [label: string, f1: double ... 9 more
 <td>4.7927822281720975e-2</td>
 <td>4.971691588284575e-2</td>
 <td>2.834335387416711e-2</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>northamerica</td>
@@ -1502,6 +1506,7 @@ df_feats: org.apache.spark.sql.DataFrame = [label: string, f1: double ... 9 more
 <td>4.8155438480070735e-2</td>
 <td>4.9142725165688565e-2</td>
 <td>2.8249953069475142e-2</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>oceania</td>
@@ -1514,6 +1519,7 @@ df_feats: org.apache.spark.sql.DataFrame = [label: string, f1: double ... 9 more
 <td>4.7505925110551364e-2</td>
 <td>4.91442272084265e-2</td>
 <td>2.8189392163757366e-2</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>oceania</td>
@@ -1526,6 +1532,7 @@ df_feats: org.apache.spark.sql.DataFrame = [label: string, f1: double ... 9 more
 <td>4.7204230602989124e-2</td>
 <td>4.924480852083609e-2</td>
 <td>2.8248894260982697e-2</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>northamerica</td>
@@ -1538,6 +1545,7 @@ df_feats: org.apache.spark.sql.DataFrame = [label: string, f1: double ... 9 more
 <td>4.798730716338432e-2</td>
 <td>4.891641705251543e-2</td>
 <td>2.8176900511909613e-2</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>northamerica</td>
@@ -1550,6 +1558,7 @@ df_feats: org.apache.spark.sql.DataFrame = [label: string, f1: double ... 9 more
 <td>4.736004053024926e-2</td>
 <td>4.885765419857541e-2</td>
 <td>2.808776879962372e-2</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>oceania</td>
@@ -1562,6 +1571,7 @@ df_feats: org.apache.spark.sql.DataFrame = [label: string, f1: double ... 9 more
 <td>4.953359168906935e-2</td>
 <td>3.706736195485632e-2</td>
 <td>9.33959859047603e-2</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>oceania</td>
@@ -1574,6 +1584,20 @@ df_feats: org.apache.spark.sql.DataFrame = [label: string, f1: double ... 9 more
 <td>5.5367147481448e-2</td>
 <td>7.893304374981844e-2</td>
 <td>5.2953756235023415e-2</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
