--- a/000_0-sds-3-x-projects/student-project-10_group-Geosmus/02_ClusteringEmoticonsBasedOnTweets.html
+++ b/000_0-sds-3-x-projects/student-project-10_group-Geosmus/02_ClusteringEmoticonsBasedOnTweets.html
@@ -1459,57 +1459,7 @@ emoticonsList.zipWithIndex.foreach({case (e, i) =&gt; println(e + &quot;, &quot;
 😛, 892 occurences
 😜, 3070 occurences
 😝, 1405 occurences
-😞, 1743 occurences
-😟, 401 occurences
-😠, 815 occurences
-😡, 2853 occurences
-😢, 3563 occurences
-😣, 1064 occurences
-😤, 1778 occurences
-😥, 1181 occurences
-😦, 101 occurences
-😧, 170 occurences
-😨, 353 occurences
-😩, 5055 occurences
-😪, 1828 occurences
-😫, 1594 occurences
-😬, 2828 occurences
-😭, 23494 occurences
-😮, 483 occurences
-😯, 328 occurences
-😰, 612 occurences
-😱, 2205 occurences
-😲, 708 occurences
-😳, 3712 occurences
-😴, 1906 occurences
-😵, 483 occurences
-😶, 577 occurences
-😷, 1568 occurences
-😸, 230 occurences
-😹, 933 occurences
-😺, 143 occurences
-😻, 1177 occurences
-😼, 178 occurences
-😽, 173 occurences
-😾, 58 occurences
-😿, 127 occurences
-🙀, 141 occurences
-🙁, 417 occurences
-🙂, 3283 occurences
-🙃, 2935 occurences
-🙄, 7233 occurences
-🙅, 737 occurences
-🙆, 887 occurences
-🙇, 1829 occurences
-🙈, 2492 occurences
-🙉, 193 occurences
-🙊, 641 occurences
-🙋, 2220 occurences
-🙌, 6954 occurences
-🙍, 21 occurences
-🙎, 37 occurences
-🙏, 25801 occurences
-emoticonsMatrix: Array[Int] = Array(3510, 163, 149, 188, 115, 81, 91, 33, 4, 51, 64, 32, 7, 75, 44, 5, 6, 6, 6, 1, 2, 0, 1, 11, 41, 13, 10, 15, 36, 14, 8, 1, 2, 2, 6, 0, 1, 15, 0, 0, 2, 3, 0, 2, 10, 17, 10, 4, 3, 15, 9, 15, 1, 4, 1, 18, 9, 0, 3, 3, 1, 2, 1, 1, 0, 6, 26, 17, 27, 0, 2, 4, 11, 1, 3, 15, 34, 0, 0, 92, 8679, 476, 135, 171, 225, 180, 44, 14, 161, 227, 75, 39, 161, 114, 39, 17, 8, 17, 7, 19, 9, 5, 15, 132, 14, 50, 36, 104, 36, 10, 1, 3, 13, 22, 2, 12, 14, 0, 0, 0, 22, 5, 6, 30, 49, 6, 6, 4, 30, 17, 27, 7, 7, 8, 37, 3, 0, 3, 6, 2, 2, 1, 0, 1, 6, 53, 31, 63, 5, 9, 36, 47, 5, 13, 34, 74, 0, 0, 244, 65997, 139, 151, 977, 348, 104, 39, 365, 206, 117, 118, 437, 222, 115, 37, 28, 95, 20, 84, 20, 21, 14, 285, 17, 26, 46, 295, 108, 19, 9, 12, 42, 73, 22, 40, 26, 4, 5, 5, 363, 33, 72, 174, 2074, 26, 15, 11, 93, 43, 203, 38, 21, 17, 50, 5, 65, 2, 39, 2, 0, 2, 0, 1, 15, 110, 119, 355, 24, 95, 19, 306, 14, 60, 73, 183, 0, 1, 493, 3603, 176, 131, 117, 22, 3, 86, 189, 33, 16, 80, 30, 10, 5, 2, 4, 6, 8, 5, 4, 11, 59, 10, 13, 18, 26, 20, 2, 2, 2, 5, 12, 5, 3, 3, 0, 0, 8, 2, 2, 2, 10, 34, 9, 7, 3, 14, 13, 14, 3, 3, 1, 17, 9, 0, 6, 4, 2, 4, 0, 0, 2, 2, 30, 15, 12, 1, 22, 82, 4, 1, 1, 16, 27, 0, 0, 102, 2851, 130, 122, 22, 6, 58, 104, 29, 20, 66, 37, 9, 4, 5, 4, 2, 8, 4, 2, 10, 35, 10, 12, 15, 34, 20, 2, 2, 0, 3, 7, 4, 4, 3, 0, 0, 3, 1, 6, 3, 11, 25, 8, 5, 2, 6, 11, 16, 3, 1, 0, 10, 5, 3, 7, 5, 0, 4, 1, 0, 0, 2, 31, 14, 21, 1, 10, 23, 16, 0, 1, 19, 20, 0, 0, 69, 10402, 222, 53, 21, 124, 169, 71, 54, 118, 52, 62, 18, 15, 23, 20, 31, 5, 7, 18, 79, 13, 14, 23, 70, 36, 13, 4, 4, 6, 39, 17, 5, 6, 2, 1, 6, 44, 11, 12, 57, 157, 10, 7, 13, 45, 19, 40, 20, 11, 3, 17, 7, 13, 2, 3, 1, 1, 0, 1, 0, 5, 39, 48, 77, 11, 12, 67, 64, 4, 12, 19, 34, 0, 1, 135, 4817, 20, 5, 87, 160, 61, 27, 89, 36, 14, 5, 3, 7, 7, 10, 4, 3, 10, 52, 10, 13, 14, 43, 27, 4, 7, 2, 3, 8, 4, 8, 15, 1, 3, 2, 11, 1, 5, 19, 51, 10, 6, 2, 15, 15, 36, 6, 4, 1, 8, 7, 12, 4, 4, 1, 3, 1, 0, 2, 2, 23, 19, 43, 0, 9, 58, 23, 4, 2, 20, 49, 0, 0, 68, 2550, 24, 29, 99, 28, 20, 86, 46, 9, 1, 3, 3, 0, 7, 2, 0, 6, 57, 10, 13, 10, 14, 9, 4, 1, 2, 3, 10, 1, 2, 1, 0, 0, 3, 2, 2, 1, 17, 37, 4, 5, 1, 12, 15, 16, 9, 11, 0, 22, 3, 0, 2, 3, 2, 3, 0, 0, 1, 1, 22, 11, 16, 0, 3, 6, 5, 0, 0, 10, 40, 0, 0, 329, 2127, 46, 15, 45, 4, 40, 32, 57, 2, 1, 5, 16, 2, 1, 0, 0, 26, 1, 1, 11, 37, 6, 2, 0, 5, 6, 3, 2, 5, 0, 0, 0, 3, 11, 3, 2, 8, 12, 3, 0, 2, 8, 0, 4, 2, 0, 0, 3, 2, 2, 0, 4, 5, 2, 0, 0, 0, 0, 3, 6, 5, 1, 1, 0, 12, 0, 4, 10, 8, 0, 0, 11, 6846, 223, 86, 42, 127, 98, 74, 8, 9, 9, 11, 14, 4, 0, 18, 244, 15, 27, 26, 77, 20, 6, 3, 3, 2, 12, 2, 5, 5, 0, 2, 1, 7, 2, 1, 23, 18, 6, 6, 2, 14, 13, 24, 8, 0, 1, 25, 5, 4, 3, 13, 0, 0, 0, 1, 0, 3, 45, 46, 46, 7, 0, 25, 23, 5, 6, 25, 75, 0, 0, 173, 11300, 102, 58, 221, 82, 36, 23, 18, 14, 18, 26, 10, 9, 21, 254, 24, 48, 16, 39, 20, 10, 3, 0, 5, 35, 10, 2, 7, 0, 2, 6, 23, 8, 10, 28, 86, 6, 5, 5, 22, 12, 31, 23, 4, 8, 39, 8, 4, 4, 17, 1, 6, 0, 0, 1, 11, 65, 37, 50, 3, 11, 179, 20, 0, 2, 75, 99, 0, 0, 612, 3729, 49, 241, 45, 39, 10, 6, 13, 3, 14, 9, 4, 22, 106, 26, 37, 58, 54, 33, 13, 8, 4, 2, 15, 5, 5, 2, 0, 0, 3, 18, 2, 10, 12, 28, 4, 7, 0, 12, 8, 21, 6, 1, 1, 10, 6, 1, 3, 18, 1, 6, 0, 0, 0, 12, 22, 19, 25, 2, 4, 26, 25, 4, 7, 13, 20, 0, 0, 76, 3664, 87, 28, 47, 6, 5, 7, 3, 21, 12, 1, 3, 35, 11, 12, 6, 19, 11, 6, 5, 1, 2, 11, 3, 5, 4, 0, 2, 1, 18, 10, 9, 8, 40, 1, 0, 1, 7, 2, 10, 14, 4, 2, 6, 1, 3, 0, 1, 2, 0, 0, 0, 0, 3, 29, 14, 20, 1, 4, 15, 9, 1, 23, 6, 38, 0, 0, 101, 18604, 100, 53, 13, 13, 18, 10, 33, 11, 8, 35, 745, 44, 64, 47, 86, 40, 8, 7, 17, 15, 29, 4, 11, 10, 0, 1, 2, 102, 16, 22, 24, 324, 20, 9, 8, 54, 23)
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
@@ -2122,6 +2072,10 @@ for the reader to decide.</p>
 <td>MEX</td>
 <td>0.4382897697767007</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2180,6 +2134,10 @@ for the reader to decide.</p>
 <tr class="even">
 <td>MNG</td>
 <td>0.47474747474747475</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2240,6 +2198,10 @@ for the reader to decide.</p>
 <td>SAU</td>
 <td>1.137009664582149e-2</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2298,6 +2260,10 @@ for the reader to decide.</p>
 <tr class="even">
 <td>BRA</td>
 <td>1.3839552132768763e-2</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2358,6 +2324,10 @@ for the reader to decide.</p>
 <td>PRY</td>
 <td>2.869757174392936e-2</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2416,6 +2386,10 @@ for the reader to decide.</p>
 <tr class="even">
 <td>MEX</td>
 <td>0.18123593560671628</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
