--- a/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/01_StreamToFile.html
+++ b/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/01_StreamToFile.html
@@ -1419,31 +1419,7 @@ Sainudiin.</p>
  |-- total_tests: double (nullable = true)
  |-- total_tests_per_thousand: double (nullable = true)
  |-- new_tests_per_thousand: double (nullable = true)
- |-- new_tests_smoothed: double (nullable = true)
- |-- new_tests_smoothed_per_thousand: double (nullable = true)
- |-- positive_rate: double (nullable = true)
- |-- tests_per_case: double (nullable = true)
- |-- tests_units: string (nullable = true)
- |-- total_vaccinations: double (nullable = true)
- |-- new_vaccinations: double (nullable = true)
- |-- total_vaccinations_per_hundred: double (nullable = true)
- |-- new_vaccinations_per_million: double (nullable = true)
- |-- stringency_index: double (nullable = true)
- |-- population: double (nullable = true)
- |-- population_density: double (nullable = true)
- |-- median_age: double (nullable = true)
- |-- aged_65_older: double (nullable = true)
- |-- aged_70_older: double (nullable = true)
- |-- gdp_per_capita: double (nullable = true)
- |-- extreme_poverty: double (nullable = true)
- |-- cardiovasc_death_rate: double (nullable = true)
- |-- diabetes_prevalence: double (nullable = true)
- |-- female_smokers: double (nullable = true)
- |-- male_smokers: double (nullable = true)
- |-- handwashing_facilities: double (nullable = true)
- |-- hospital_beds_per_thousand: double (nullable = true)
- |-- life_expectancy: double (nullable = true)
- |-- human_development_index: double (nullable = true)
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
@@ -1787,6 +1763,11 @@ query.awaitTermination() // hit cancel to terminate
 <td>part-00003-9c6bb086-0876-4f0b-bb0b-921b07db0245-c000.snappy.parquet</td>
 <td>16218.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1824,6 +1805,7 @@ query.awaitTermination() // hit cancel to terminate
 <th>new_cases_smoothed</th>
 <th>total_deaths</th>
 <th>new_deaths</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1838,6 +1820,7 @@ query.awaitTermination() // hit cancel to terminate
 <td>61421</td>
 <td>45901</td>
 <td>62377</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>mean</td>
@@ -1850,6 +1833,7 @@ query.awaitTermination() // hit cancel to terminate
 <td>2367.056380553872</td>
 <td>8908.311256835363</td>
 <td>55.19233050643667</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>stddev</td>
@@ -1862,6 +1846,7 @@ query.awaitTermination() // hit cancel to terminate
 <td>20188.721091973344</td>
 <td>62835.10460453239</td>
 <td>420.0315418848828</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>min</td>
@@ -1874,6 +1859,7 @@ query.awaitTermination() // hit cancel to terminate
 <td>-525.0</td>
 <td>1.0</td>
 <td>-1918.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>max</td>
@@ -1886,6 +1872,7 @@ query.awaitTermination() // hit cancel to terminate
 <td>600775.429</td>
 <td>1506251.0</td>
 <td>12825.0</td>
+<td>...</td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1911,6 +1898,7 @@ display(parquetFileDF.orderBy($&quot;date&quot;.desc))
 <th>total_deaths</th>
 <th>new_deaths</th>
 <th>new_deaths_smoothed</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1925,6 +1913,7 @@ display(parquetFileDF.orderBy($&quot;date&quot;.desc))
 <td>35.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRT</td>
@@ -1937,6 +1926,7 @@ display(parquetFileDF.orderBy($&quot;date&quot;.desc))
 <td>7377.0</td>
 <td>91.0</td>
 <td>78.143</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>JAM</td>
@@ -1949,6 +1939,7 @@ display(parquetFileDF.orderBy($&quot;date&quot;.desc))
 <td>306.0</td>
 <td>1.0</td>
 <td>0.571</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>NIC</td>
@@ -1961,6 +1952,7 @@ display(parquetFileDF.orderBy($&quot;date&quot;.desc))
 <td>166.0</td>
 <td>0.0</td>
 <td>0.143</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>CHE</td>
@@ -1973,6 +1965,7 @@ display(parquetFileDF.orderBy($&quot;date&quot;.desc))
 <td>8109.0</td>
 <td>91.0</td>
 <td>73.571</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>FRA</td>
@@ -1985,6 +1978,7 @@ display(parquetFileDF.orderBy($&quot;date&quot;.desc))
 <td>66699.0</td>
 <td>282.0</td>
 <td>313.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>HTI</td>
@@ -1997,6 +1991,7 @@ display(parquetFileDF.orderBy($&quot;date&quot;.desc))
 <td>236.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>MCO</td>
@@ -2009,6 +2004,7 @@ display(parquetFileDF.orderBy($&quot;date&quot;.desc))
 <td>3.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>PAN</td>
@@ -2021,6 +2017,7 @@ display(parquetFileDF.orderBy($&quot;date&quot;.desc))
 <td>4283.0</td>
 <td>45.0</td>
 <td>44.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>MWI</td>
@@ -2033,6 +2030,20 @@ display(parquetFileDF.orderBy($&quot;date&quot;.desc))
 <td>199.0</td>
 <td>0.0</td>
 <td>1.429</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2133,6 +2144,7 @@ query.awaitTermination() // hit cancel to terminate
 <th>new_cases_smoothed</th>
 <th>total_deaths</th>
 <th>new_deaths</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -2147,6 +2159,7 @@ query.awaitTermination() // hit cancel to terminate
 <td>57046</td>
 <td>49657</td>
 <td>49656</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>mean</td>
@@ -2159,6 +2172,7 @@ query.awaitTermination() // hit cancel to terminate
 <td>2957.9528833748072</td>
 <td>9440.825059910989</td>
 <td>75.87175769292735</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>stddev</td>
@@ -2171,6 +2185,7 @@ query.awaitTermination() // hit cancel to terminate
 <td>25947.18346899017</td>
 <td>74852.02463395565</td>
 <td>554.179232738698</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>min</td>
@@ -2183,6 +2198,7 @@ query.awaitTermination() // hit cancel to terminate
 <td>-1121.714</td>
 <td>1.0</td>
 <td>-1918.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>max</td>
@@ -2195,6 +2211,7 @@ query.awaitTermination() // hit cancel to terminate
 <td>646630.286</td>
 <td>1883761.0</td>
 <td>15525.0</td>
+<td>...</td>
 </tr>
 </tbody>
 </table></div></div>
