--- a/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/02_DataPreprocess.html
+++ b/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/02_DataPreprocess.html
@@ -1406,6 +1406,7 @@
 <th>total_deaths</th>
 <th>new_deaths</th>
 <th>new_deaths_smoothed</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1420,6 +1421,7 @@
 <td>61.0</td>
 <td>2.0</td>
 <td>3.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>ALB</td>
@@ -1432,6 +1434,7 @@
 <td>33.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>DZA</td>
@@ -1444,6 +1447,7 @@
 <td>null</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>AND</td>
@@ -1456,6 +1460,7 @@
 <td>53.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>AND</td>
@@ -1468,6 +1473,7 @@
 <td>63.0</td>
 <td>0.0</td>
 <td>0.571</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>AGO</td>
@@ -1480,6 +1486,7 @@
 <td>147.0</td>
 <td>0.0</td>
 <td>2.143</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>ATG</td>
@@ -1492,6 +1499,7 @@
 <td>null</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>ATG</td>
@@ -1504,6 +1512,7 @@
 <td>3.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>ATG</td>
@@ -1516,6 +1525,7 @@
 <td>3.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>ARG</td>
@@ -1528,6 +1538,20 @@
 <td>353.0</td>
 <td>24.0</td>
 <td>10.143</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1666,6 +1690,7 @@ res6: df_fillContinentNull.type = [iso_code: string, continent: string ... 48 mo
 <th>total_deaths</th>
 <th>new_deaths</th>
 <th>new_deaths_smoothed</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1680,6 +1705,7 @@ res6: df_fillContinentNull.type = [iso_code: string, continent: string ... 48 mo
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>AFG</td>
@@ -1692,6 +1718,7 @@ res6: df_fillContinentNull.type = [iso_code: string, continent: string ... 48 mo
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>AFG</td>
@@ -1704,6 +1731,7 @@ res6: df_fillContinentNull.type = [iso_code: string, continent: string ... 48 mo
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>AFG</td>
@@ -1716,6 +1744,7 @@ res6: df_fillContinentNull.type = [iso_code: string, continent: string ... 48 mo
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>AFG</td>
@@ -1728,6 +1757,7 @@ res6: df_fillContinentNull.type = [iso_code: string, continent: string ... 48 mo
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>AFG</td>
@@ -1740,6 +1770,7 @@ res6: df_fillContinentNull.type = [iso_code: string, continent: string ... 48 mo
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>AFG</td>
@@ -1752,6 +1783,7 @@ res6: df_fillContinentNull.type = [iso_code: string, continent: string ... 48 mo
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>AFG</td>
@@ -1764,6 +1796,7 @@ res6: df_fillContinentNull.type = [iso_code: string, continent: string ... 48 mo
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>AFG</td>
@@ -1776,6 +1809,7 @@ res6: df_fillContinentNull.type = [iso_code: string, continent: string ... 48 mo
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>AFG</td>
@@ -1788,6 +1822,20 @@ res6: df_fillContinentNull.type = [iso_code: string, continent: string ... 48 mo
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1842,6 +1890,7 @@ display(df_cleaned_feature)
 <th>total_deaths</th>
 <th>new_deaths</th>
 <th>new_deaths_smoothed</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1856,6 +1905,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>ALB</td>
@@ -1868,6 +1918,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>ALB</td>
@@ -1880,6 +1931,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>ALB</td>
@@ -1892,6 +1944,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>ALB</td>
@@ -1904,6 +1957,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>ALB</td>
@@ -1916,6 +1970,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>ALB</td>
@@ -1928,6 +1983,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>ALB</td>
@@ -1940,6 +1996,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>ALB</td>
@@ -1952,6 +2009,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>ALB</td>
@@ -1964,6 +2022,20 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2055,6 +2127,7 @@ display(df_cleaned_feature)
 <th>total_deaths</th>
 <th>new_deaths</th>
 <th>new_deaths_smoothed</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -2069,6 +2142,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRY</td>
@@ -2081,6 +2155,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>PRY</td>
@@ -2093,6 +2168,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRY</td>
@@ -2105,6 +2181,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>PRY</td>
@@ -2117,6 +2194,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRY</td>
@@ -2129,6 +2207,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>PRY</td>
@@ -2141,6 +2220,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRY</td>
@@ -2153,6 +2233,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>PRY</td>
@@ -2165,6 +2246,7 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRY</td>
@@ -2177,6 +2259,20 @@ display(df_cleaned_feature)
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
