--- a/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/03_ExplosiveAnalysis.html
+++ b/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/03_ExplosiveAnalysis.html
@@ -1326,6 +1326,7 @@
 <th>aged_70_older</th>
 <th>gdp_per_capita</th>
 <th>cardiovasc_death_rate</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1340,6 +1341,7 @@
 <td>126</td>
 <td>126</td>
 <td>126</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>mean</td>
@@ -1352,6 +1354,7 @@
 <td>6.477539682539681</td>
 <td>22517.798674603175</td>
 <td>249.51723809523807</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>stddev</td>
@@ -1364,6 +1367,7 @@
 <td>4.50202071901193</td>
 <td>21194.388486506883</td>
 <td>120.66734039269643</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>min</td>
@@ -1376,6 +1380,7 @@
 <td>0.526</td>
 <td>752.788</td>
 <td>79.37</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>max</td>
@@ -1388,6 +1393,7 @@
 <td>18.493</td>
 <td>116935.6</td>
 <td>724.417</td>
+<td>...</td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1448,6 +1454,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;population&
 <td>BIH</td>
 <td>3280815.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1506,6 +1516,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;population_
 <tr class="even">
 <td>BIH</td>
 <td>68.496</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1566,6 +1580,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;median_age&
 <td>BIH</td>
 <td>42.5</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1624,6 +1642,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;aged_65_old
 <tr class="even">
 <td>BIH</td>
 <td>16.569</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1684,6 +1706,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;aged_70_old
 <td>BIH</td>
 <td>10.711</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1742,6 +1768,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;gdp_per_cap
 <tr class="even">
 <td>SWZ</td>
 <td>7738.975</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1802,6 +1832,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;cardiovasc_
 <td>SWZ</td>
 <td>333.436</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1860,6 +1894,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;diabetes_pr
 <tr class="even">
 <td>SWZ</td>
 <td>3.94</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1920,6 +1958,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;female_smok
 <td>SWZ</td>
 <td>1.7</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1978,6 +2020,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;male_smoker
 <tr class="even">
 <td>BIH</td>
 <td>47.7</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2038,6 +2084,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;hospital_be
 <td>BIH</td>
 <td>3.5</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2096,6 +2146,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;life_expect
 <tr class="even">
 <td>BIH</td>
 <td>77.4</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2156,6 +2210,10 @@ display(valid_distinct_features.select($&quot;iso_code&quot;, $&quot;human_devel
 <td>SWZ</td>
 <td>0.588</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2188,6 +2246,7 @@ life</em>expectancy</p>
 <th>diabetes_prevalence</th>
 <th>female_smokers</th>
 <th>male_smokers</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -2202,6 +2261,7 @@ life</em>expectancy</p>
 <td>2.92</td>
 <td>1.2</td>
 <td>20.4</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>1.0423056e7</td>
@@ -2214,6 +2274,7 @@ life</em>expectancy</p>
 <td>4.55</td>
 <td>35.3</td>
 <td>52.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>1.8776707e7</td>
@@ -2226,6 +2287,7 @@ life</em>expectancy</p>
 <td>7.11</td>
 <td>7.0</td>
 <td>43.1</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>2722291.0</td>
@@ -2238,6 +2300,7 @@ life</em>expectancy</p>
 <td>3.67</td>
 <td>21.3</td>
 <td>38.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>441539.0</td>
@@ -2250,6 +2313,7 @@ life</em>expectancy</p>
 <td>8.83</td>
 <td>20.9</td>
 <td>30.2</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>6.5273512e7</td>
@@ -2262,6 +2326,7 @@ life</em>expectancy</p>
 <td>4.77</td>
 <td>30.1</td>
 <td>35.6</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>1.9129955e7</td>
@@ -2274,6 +2339,7 @@ life</em>expectancy</p>
 <td>3.94</td>
 <td>4.4</td>
 <td>24.7</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>3989175.0</td>
@@ -2286,6 +2352,7 @@ life</em>expectancy</p>
 <td>7.11</td>
 <td>5.3</td>
 <td>55.5</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>896444.0</td>
@@ -2298,6 +2365,7 @@ life</em>expectancy</p>
 <td>14.49</td>
 <td>10.2</td>
 <td>34.8</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>5057677.0</td>
@@ -2310,6 +2378,20 @@ life</em>expectancy</p>
 <td>2.42</td>
 <td>1.5</td>
 <td>18.1</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2346,6 +2428,7 @@ life</em>expectancy</p>
 <th>stringency_index</th>
 <th>population</th>
 <th>population_density</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -2360,6 +2443,7 @@ life</em>expectancy</p>
 <td>5.56</td>
 <td>7132530.0</td>
 <td>17.144</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>0.0</td>
@@ -2372,6 +2456,7 @@ life</em>expectancy</p>
 <td>5.56</td>
 <td>7132530.0</td>
 <td>17.144</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>0.0</td>
@@ -2384,6 +2469,7 @@ life</em>expectancy</p>
 <td>5.56</td>
 <td>7132530.0</td>
 <td>17.144</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>0.0</td>
@@ -2396,6 +2482,7 @@ life</em>expectancy</p>
 <td>5.56</td>
 <td>7132530.0</td>
 <td>17.144</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>0.0</td>
@@ -2408,6 +2495,7 @@ life</em>expectancy</p>
 <td>5.56</td>
 <td>7132530.0</td>
 <td>17.144</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>0.0</td>
@@ -2420,6 +2508,7 @@ life</em>expectancy</p>
 <td>5.56</td>
 <td>7132530.0</td>
 <td>17.144</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>0.0</td>
@@ -2432,6 +2521,7 @@ life</em>expectancy</p>
 <td>5.56</td>
 <td>7132530.0</td>
 <td>17.144</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>0.0</td>
@@ -2444,6 +2534,7 @@ life</em>expectancy</p>
 <td>5.56</td>
 <td>7132530.0</td>
 <td>17.144</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>0.0</td>
@@ -2456,6 +2547,7 @@ life</em>expectancy</p>
 <td>5.56</td>
 <td>7132530.0</td>
 <td>17.144</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>0.0</td>
@@ -2468,6 +2560,20 @@ life</em>expectancy</p>
 <td>5.56</td>
 <td>7132530.0</td>
 <td>17.144</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
