--- a/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/04_DataVisualize.html
+++ b/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/04_DataVisualize.html
@@ -1406,6 +1406,11 @@ display(df_cleaned_time_series.select($&quot;reproduction_rate&quot;, $&quot;loc
 <td>Sweden</td>
 <td>2020-01-25</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
