--- a/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/06_DataPredicton_LR.html
+++ b/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/06_DataPredicton_LR.html
@@ -1309,6 +1309,7 @@ without considering the time series.</p>
 <th>total_deaths</th>
 <th>new_deaths</th>
 <th>new_deaths_smoothed</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1323,6 +1324,7 @@ without considering the time series.</p>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRY</td>
@@ -1335,6 +1337,7 @@ without considering the time series.</p>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>PRY</td>
@@ -1347,6 +1350,7 @@ without considering the time series.</p>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRY</td>
@@ -1359,6 +1363,7 @@ without considering the time series.</p>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>PRY</td>
@@ -1371,6 +1376,7 @@ without considering the time series.</p>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRY</td>
@@ -1383,6 +1389,7 @@ without considering the time series.</p>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>PRY</td>
@@ -1395,6 +1402,7 @@ without considering the time series.</p>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRY</td>
@@ -1407,6 +1415,7 @@ without considering the time series.</p>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>PRY</td>
@@ -1419,6 +1428,7 @@ without considering the time series.</p>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRY</td>
@@ -1431,6 +1441,20 @@ without considering the time series.</p>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1473,27 +1497,7 @@ without considering the time series.</p>
  |-- positive_rate: double (nullable = true)
  |-- tests_units: double (nullable = true)
  |-- stringency_index: double (nullable = false)
- |-- population: double (nullable = true)
- |-- population_density: double (nullable = true)
- |-- median_age: double (nullable = true)
- |-- aged_65_older: double (nullable = true)
- |-- aged_70_older: double (nullable = true)
- |-- gdp_per_capita: double (nullable = true)
- |-- extreme_poverty: double (nullable = true)
- |-- cardiovasc_death_rate: double (nullable = true)
- |-- diabetes_prevalence: double (nullable = true)
- |-- female_smokers: double (nullable = true)
- |-- male_smokers: double (nullable = true)
- |-- handwashing_facilities: double (nullable = true)
- |-- hospital_beds_per_thousand: double (nullable = true)
- |-- life_expectancy: double (nullable = true)
- |-- human_development_index: double (nullable = true)
- |-- total_cases_per_million: double (nullable = true)
- |-- new_cases_per_million: double (nullable = true)
- |-- new_cases_smoothed_per_million: double (nullable = true)
- |-- total_deaths_per_million: double (nullable = true)
- |-- new_deaths_per_million: double (nullable = true)
- |-- new_deaths_smoothed_per_million: double (nullable = true)
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
@@ -1540,27 +1544,7 @@ positive_rate: 19749
 tests_units: 41600
 stringency_index: 0
 population: 0
-population_density: 0
-median_age: 0
-aged_65_older: 0
-aged_70_older: 0
-gdp_per_capita: 0
-extreme_poverty: 11168
-cardiovasc_death_rate: 0
-diabetes_prevalence: 0
-female_smokers: 0
-male_smokers: 0
-handwashing_facilities: 24124
-hospital_beds_per_thousand: 0
-life_expectancy: 0
-human_development_index: 0
-total_cases_per_million: 0
-new_cases_per_million: 0
-new_cases_smoothed_per_million: 0
-total_deaths_per_million: 0
-new_deaths_per_million: 0
-new_deaths_smoothed_per_million: 0
-import org.apache.spark.sql.functions._
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
@@ -1691,6 +1675,16 @@ display(df_by_location)
 <td>5748.976216647335</td>
 <td>5680.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1751,6 +1745,7 @@ display(df_by_location_normalized)
 <th>total_cases</th>
 <th>normal_stringency_index</th>
 <th>normal_population</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1765,6 +1760,7 @@ display(df_by_location_normalized)
 <td>2997.0</td>
 <td>0.5637637867647058</td>
 <td>5.68388857419261e-3</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>DZA</td>
@@ -1777,6 +1773,7 @@ display(df_by_location_normalized)
 <td>84152.0</td>
 <td>0.8297334558823529</td>
 <td>3.040017357002878e-2</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>ERI</td>
@@ -1789,6 +1786,7 @@ display(df_by_location_normalized)
 <td>577.0</td>
 <td>0.861672794117647</td>
 <td>2.3957935418198006e-3</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>ZWE</td>
@@ -1801,6 +1799,7 @@ display(df_by_location_normalized)
 <td>10129.0</td>
 <td>0.7977941176470588</td>
 <td>1.0258703502039418e-2</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>TGO</td>
@@ -1813,6 +1812,7 @@ display(df_by_location_normalized)
 <td>2997.0</td>
 <td>0.5637637867647058</td>
 <td>5.68388857419261e-3</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>ZWE</td>
@@ -1825,6 +1825,7 @@ display(df_by_location_normalized)
 <td>10129.0</td>
 <td>0.7977941176470588</td>
 <td>1.0258703502039418e-2</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>LBR</td>
@@ -1837,6 +1838,7 @@ display(df_by_location_normalized)
 <td>1595.0</td>
 <td>0.6595818014705882</td>
 <td>3.445837519850278e-3</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>TUN</td>
@@ -1849,6 +1851,7 @@ display(df_by_location_normalized)
 <td>96769.0</td>
 <td>0.7872242647058822</td>
 <td>8.143462256240255e-3</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>COM</td>
@@ -1861,6 +1864,7 @@ display(df_by_location_normalized)
 <td>613.0</td>
 <td>0.0</td>
 <td>5.358819972048937e-4</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>MWI</td>
@@ -1873,6 +1877,20 @@ display(df_by_location_normalized)
 <td>6028.0</td>
 <td>0.5851332720588235</td>
 <td>1.3223512140906203e-2</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2016,6 +2034,14 @@ val df_by_location_normalized_selected = df_by_location_normalized.select($&quot
 <td>0.0</td>
 <td>-0.9250590372388737</td>
 <td>5.753721728243157</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2219,7 +2245,7 @@ Root Mean Squared Error (RMSE) on test data = 2.2259062146564705
 import org.apache.spark.ml.evaluation.RegressionEvaluator
 predictions: org.apache.spark.sql.DataFrame = [features: vector, log_total_cases_per_million: double ... 1 more field]
 evaluator: org.apache.spark.ml.evaluation.RegressionEvaluator = RegressionEvaluator: uid=regEval_575198e0fd5f, metricName=rmse, throughOrigin=false
-rmse: Double = 2.2259062146564705
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
