--- a/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/08_DataPrediction_GP.html
+++ b/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/08_DataPrediction_GP.html
@@ -1453,6 +1453,10 @@ Python interpreter will be restarted.
 <td>2020-02-01</td>
 <td>1513.8570000000002</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1513,6 +1517,10 @@ Python interpreter will be restarted.
 <tr class="even">
 <td>2020-02-01</td>
 <td>31.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1589,6 +1597,11 @@ display(df_ncworld_indexed)
 <td>2020-02-01</td>
 <td>1513.8569999999997</td>
 <td>10.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1691,6 +1704,11 @@ display(df_ncworld_test)
 <td>2020-11-12</td>
 <td>562723.283</td>
 <td>295.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1822,6 +1840,12 @@ display(df_nddenswe_indexed)
 <td>0.0</td>
 <td>10.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1908,6 +1932,12 @@ display(df_ncdenswe_test)
 <td>2020-11-12</td>
 <td>4228.714</td>
 <td>295.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -2444,42 +2474,7 @@ Iter: 230, train_loss: -0.30861225724220276
 Iter: 240, train_loss: -0.3086118698120117
 Iter: 250, train_loss: -0.30861696600914
 Iter: 260, train_loss: -0.30861350893974304
-Iter: 270, train_loss: -0.3086144030094147
-Iter: 280, train_loss: -0.3086142838001251
-Iter: 290, train_loss: -0.30861034989356995
-Iter: 300, train_loss: -0.3086152970790863
-
-training new deaths prediction model
-Iter: 10, train_loss: 1.0905324220657349
-Iter: 20, train_loss: 0.9422212243080139
-Iter: 30, train_loss: 0.822321891784668
-Iter: 40, train_loss: 0.7358468174934387
-Iter: 50, train_loss: 0.6878499984741211
-Iter: 60, train_loss: 0.6686744689941406
-Iter: 70, train_loss: 0.6627503633499146
-Iter: 80, train_loss: 0.6610774993896484
-Iter: 90, train_loss: 0.6605528593063354
-Iter: 100, train_loss: 0.6603661775588989
-Iter: 110, train_loss: 0.6602908968925476
-Iter: 120, train_loss: 0.6602528095245361
-Iter: 130, train_loss: 0.660234272480011
-Iter: 140, train_loss: 0.6602233648300171
-Iter: 150, train_loss: 0.6602159142494202
-Iter: 160, train_loss: 0.6602100133895874
-Iter: 170, train_loss: 0.6602076292037964
-Iter: 180, train_loss: 0.6602047085762024
-Iter: 190, train_loss: 0.6602054238319397
-Iter: 200, train_loss: 0.6602044701576233
-Iter: 210, train_loss: 0.6602048277854919
-Iter: 220, train_loss: 0.6602048277854919
-Iter: 230, train_loss: 0.6602058410644531
-Iter: 240, train_loss: 0.6602041721343994
-Iter: 250, train_loss: 0.6602049469947815
-Iter: 260, train_loss: 0.660204291343689
-Iter: 270, train_loss: 0.660205602645874
-Iter: 280, train_loss: 0.6602062582969666
-Iter: 290, train_loss: 0.6602067351341248
-Iter: 300, train_loss: 0.6602053046226501
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
@@ -2681,40 +2676,7 @@ Iter: 250, train_loss: 0.23399244248867035
 Iter: 260, train_loss: 0.23398932814598083
 Iter: 270, train_loss: 0.23399288952350616
 Iter: 280, train_loss: 0.2339920699596405
-Iter: 290, train_loss: 0.23399271070957184
-Iter: 300, train_loss: 0.23399384319782257
-
-training new deaths prediction model
-Iter: 10, train_loss: 1.2736952304840088
-Iter: 20, train_loss: 1.2659318447113037
-Iter: 30, train_loss: 1.2641785144805908
-Iter: 40, train_loss: 1.2638046741485596
-Iter: 50, train_loss: 1.2635420560836792
-Iter: 60, train_loss: 1.2633696794509888
-Iter: 70, train_loss: 1.2632778882980347
-Iter: 80, train_loss: 1.263228178024292
-Iter: 90, train_loss: 1.2631932497024536
-Iter: 100, train_loss: 1.2631678581237793
-Iter: 110, train_loss: 1.2631479501724243
-Iter: 120, train_loss: 1.2631317377090454
-Iter: 130, train_loss: 1.2631182670593262
-Iter: 140, train_loss: 1.2631065845489502
-Iter: 150, train_loss: 1.2630963325500488
-Iter: 160, train_loss: 1.263087511062622
-Iter: 170, train_loss: 1.2630798816680908
-Iter: 180, train_loss: 1.2630729675292969
-Iter: 190, train_loss: 1.2630666494369507
-Iter: 200, train_loss: 1.263061285018921
-Iter: 210, train_loss: 1.2630563974380493
-Iter: 220, train_loss: 1.2630518674850464
-Iter: 230, train_loss: 1.2630479335784912
-Iter: 240, train_loss: 1.263043999671936
-Iter: 250, train_loss: 1.2630406618118286
-Iter: 260, train_loss: 1.2630375623703003
-Iter: 270, train_loss: 1.263034701347351
-Iter: 280, train_loss: 1.263032078742981
-Iter: 290, train_loss: 1.2630293369293213
-Iter: 300, train_loss: 1.2630271911621094
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
@@ -2879,40 +2841,7 @@ Iter: 250, train_loss: -0.07766450196504593
 Iter: 260, train_loss: -0.07864208519458771
 Iter: 270, train_loss: -0.07991237938404083
 Iter: 280, train_loss: -0.08046308904886246
-Iter: 290, train_loss: -0.08109690248966217
-Iter: 300, train_loss: -0.081480473279953
-
-training new deaths prediction model
-Iter: 10, train_loss: 1.2888128757476807
-Iter: 20, train_loss: 1.275627851486206
-Iter: 30, train_loss: 1.2696713209152222
-Iter: 40, train_loss: 1.2672677040100098
-Iter: 50, train_loss: 1.2659194469451904
-Iter: 60, train_loss: 1.2652630805969238
-Iter: 70, train_loss: 1.2648776769638062
-Iter: 80, train_loss: 1.2646286487579346
-Iter: 90, train_loss: 1.2644517421722412
-Iter: 100, train_loss: 1.2643193006515503
-Iter: 110, train_loss: 1.2642160654067993
-Iter: 120, train_loss: 1.2641332149505615
-Iter: 130, train_loss: 1.2640646696090698
-Iter: 140, train_loss: 1.2640074491500854
-Iter: 150, train_loss: 1.2639591693878174
-Iter: 160, train_loss: 1.2639178037643433
-Iter: 170, train_loss: 1.2638816833496094
-Iter: 180, train_loss: 1.263850450515747
-Iter: 190, train_loss: 1.2638229131698608
-Iter: 200, train_loss: 1.2637988328933716
-Iter: 210, train_loss: 1.2637768983840942
-Iter: 220, train_loss: 1.2637579441070557
-Iter: 230, train_loss: 1.2637404203414917
-Iter: 240, train_loss: 1.2637248039245605
-Iter: 250, train_loss: 1.263710379600525
-Iter: 260, train_loss: 1.2636975049972534
-Iter: 270, train_loss: 1.2636858224868774
-Iter: 280, train_loss: 1.263675332069397
-Iter: 290, train_loss: 1.2636650800704956
-Iter: 300, train_loss: 1.2636560201644897
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
