--- a/000_0-sds-3-x-projects/student-project-14_group-NullHypothesisEvaluationCriteria/00_distributed_combinatorial_bandit.html
+++ b/000_0-sds-3-x-projects/student-project-14_group-NullHypothesisEvaluationCriteria/00_distributed_combinatorial_bandit.html
@@ -1970,103 +1970,7 @@ Iteration 24, elapsed time: 494099 ms
 Iteration 25, elapsed time: 515728 ms
 Iteration 26, elapsed time: 553540 ms
 Iteration 27, elapsed time: 575015 ms
-Iteration 28, elapsed time: 592082 ms
-Iteration 29, elapsed time: 624349 ms
-Iteration 30, elapsed time: 645980 ms
-Iteration 31, elapsed time: 686832 ms
-Iteration 32, elapsed time: 716649 ms
-Iteration 33, elapsed time: 746812 ms
-Iteration 34, elapsed time: 763532 ms
-Iteration 35, elapsed time: 786390 ms
-Iteration 36, elapsed time: 813434 ms
-Iteration 37, elapsed time: 835171 ms
-Iteration 38, elapsed time: 866043 ms
-Iteration 39, elapsed time: 892568 ms
-Iteration 40, elapsed time: 918749 ms
-Iteration 41, elapsed time: 942338 ms
-Iteration 42, elapsed time: 956895 ms
-Iteration 43, elapsed time: 972804 ms
-Iteration 44, elapsed time: 986972 ms
-Iteration 45, elapsed time: 1003529 ms
-Iteration 46, elapsed time: 1021157 ms
-Iteration 47, elapsed time: 1053163 ms
-Iteration 48, elapsed time: 1069664 ms
-Iteration 49, elapsed time: 1089713 ms
-Iteration 50, elapsed time: 1119183 ms
-Iteration 51, elapsed time: 1132827 ms
-Iteration 52, elapsed time: 1144452 ms
-Iteration 53, elapsed time: 1159900 ms
-Iteration 54, elapsed time: 1174581 ms
-Iteration 55, elapsed time: 1192365 ms
-Iteration 56, elapsed time: 1206917 ms
-Iteration 57, elapsed time: 1221419 ms
-Iteration 58, elapsed time: 1235554 ms
-Iteration 59, elapsed time: 1253976 ms
-Iteration 60, elapsed time: 1283507 ms
-Iteration 61, elapsed time: 1303086 ms
-Iteration 62, elapsed time: 1318591 ms
-Iteration 63, elapsed time: 1348081 ms
-Iteration 64, elapsed time: 1365186 ms
-Iteration 65, elapsed time: 1385235 ms
-Iteration 66, elapsed time: 1399504 ms
-Iteration 67, elapsed time: 1428328 ms
-Iteration 68, elapsed time: 1443365 ms
-Iteration 69, elapsed time: 1466065 ms
-Iteration 70, elapsed time: 1485121 ms
-Iteration 71, elapsed time: 1501413 ms
-Iteration 72, elapsed time: 1517653 ms
-Iteration 73, elapsed time: 1535818 ms
-Iteration 74, elapsed time: 1550425 ms
-Iteration 75, elapsed time: 1582959 ms
-Iteration 76, elapsed time: 1599048 ms
-Iteration 77, elapsed time: 1617722 ms
-Iteration 78, elapsed time: 1634656 ms
-Iteration 79, elapsed time: 1656438 ms
-Iteration 80, elapsed time: 1676291 ms
-Iteration 81, elapsed time: 1693179 ms
-Iteration 82, elapsed time: 1710943 ms
-Iteration 83, elapsed time: 1725179 ms
-Iteration 84, elapsed time: 1738993 ms
-Iteration 85, elapsed time: 1757378 ms
-Iteration 86, elapsed time: 1772705 ms
-Iteration 87, elapsed time: 1811560 ms
-Iteration 88, elapsed time: 1827914 ms
-Iteration 89, elapsed time: 1848061 ms
-Iteration 90, elapsed time: 1869575 ms
-Iteration 91, elapsed time: 1887501 ms
-Iteration 92, elapsed time: 1902993 ms
-Iteration 93, elapsed time: 1925588 ms
-Iteration 94, elapsed time: 1951213 ms
-Iteration 95, elapsed time: 1969550 ms
-Iteration 96, elapsed time: 1997350 ms
-Iteration 97, elapsed time: 2013487 ms
-Iteration 98, elapsed time: 2027179 ms
-Iteration 99, elapsed time: 2041817 ms
-Starting aggregation of regret values, elapsed time: 2065189 ms
-Finished experiment! Elapsed time:2131615
-import scala.math.sqrt
-import scala.math.max
-startTime: Long = 1610442657284
-seed: Int = 1000
-eps: Double = 1.0E-5
-N: Int = 100
-srcId: Long = 0
-dstId: Long = 9
-baseGraph: org.apache.spark.graphx.Graph[Long,Double] = org.apache.spark.graphx.impl.GraphImpl@28b64ba4
-useToyExample: Boolean = true
-varFactor: Double = 0.01
-prior: org.apache.spark.graphx.Graph[Long,(Double, Double)] = org.apache.spark.graphx.impl.GraphImpl@74f06565
-posterior: org.apache.spark.graphx.Graph[Long,(Double, Double)] = org.apache.spark.graphx.impl.GraphImpl@751a558c
-env: org.apache.spark.graphx.Graph[Long,(Double, Double)] = org.apache.spark.graphx.impl.GraphImpl@8ce8e2
-optimal: org.apache.spark.graphx.Graph[Long,Double] = org.apache.spark.graphx.impl.GraphImpl@6ee0cb5a
-optimalExpectedCost: Double = 170.67842154901433
-optimalPathEdges: Array[(org.apache.spark.graphx.VertexId, org.apache.spark.graphx.VertexId)] = Array((0,1), (1,9))
-lastAction: org.apache.spark.graphx.Graph[Long,Double] = org.apache.spark.graphx.impl.GraphImpl@4806b809
-allActions: org.apache.spark.graphx.Graph[Long,Array[Double]] = org.apache.spark.graphx.impl.GraphImpl@3ebc1a58
-countActions: org.apache.spark.graphx.Graph[Long,Double] = org.apache.spark.graphx.impl.GraphImpl@6d46efc7
-allActions: org.apache.spark.graphx.Graph[Long,Array[Double]] = org.apache.spark.graphx.impl.GraphImpl@3ebc1a58
-instantRegretValues: Array[Double] = Array(26.636988940342178, 23.984447406903655, 0.0, 0.0, 0.0, 28.749696934220793, 0.0, 43.00788444960253, 0.0, 36.899665259259336, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 37.27307360794842, 0.0, 13.28180079789928, 0.0, 13.28180079789928, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 13.28180079789928, 13.28180079789928, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 13.28180079789928, 0.0)
-endTime: Long = 1610444788899
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
@@ -2586,6 +2490,10 @@ spikes as these corresponds to “exploratory” actions.</p>
 <td>10.0</td>
 <td>36.899665259259336</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2649,6 +2557,10 @@ regret should reach a plateau.</p>
 <tr class="even">
 <td>10.0</td>
 <td>122.37901773106915</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
