--- a/000_0-sds-3-x-projects/student-project-15_group-FinancialDataStreams/02_rl_intraday_trading_elephas.html
+++ b/000_0-sds-3-x-projects/student-project-15_group-FinancialDataStreams/02_rl_intraday_trading_elephas.html
@@ -1735,86 +1735,7 @@ Use tf.cast instead.
 &gt;&gt;&gt; Fit model
 &gt;&gt;&gt; Initialize workers
 &gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
-&gt;&gt;&gt; Async training complete.
-&gt;&gt;&gt; Fit model
-&gt;&gt;&gt; Initialize workers
-&gt;&gt;&gt; Distribute load
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
