--- a/000_0-sds-3-x-projects/student-project-16_group-IntrusionDetection/00_Introduction.html
+++ b/000_0-sds-3-x-projects/student-project-16_group-IntrusionDetection/00_Introduction.html
@@ -1582,6 +1582,7 @@ to predict the attack record label.</p>
 <th>_c7</th>
 <th>_c8</th>
 <th>_c9</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1596,6 +1597,7 @@ to predict the attack record label.</p>
 <td>132</td>
 <td>164</td>
 <td>31</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>59.166.0.0</td>
@@ -1608,6 +1610,7 @@ to predict the attack record label.</p>
 <td>528</td>
 <td>304</td>
 <td>31</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>59.166.0.6</td>
@@ -1620,6 +1623,7 @@ to predict the attack record label.</p>
 <td>146</td>
 <td>178</td>
 <td>31</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>59.166.0.5</td>
@@ -1632,6 +1636,7 @@ to predict the attack record label.</p>
 <td>132</td>
 <td>164</td>
 <td>31</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>59.166.0.3</td>
@@ -1644,6 +1649,7 @@ to predict the attack record label.</p>
 <td>146</td>
 <td>178</td>
 <td>31</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>59.166.0.0</td>
@@ -1656,6 +1662,7 @@ to predict the attack record label.</p>
 <td>568</td>
 <td>312</td>
 <td>31</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>59.166.0.6</td>
@@ -1668,6 +1675,7 @@ to predict the attack record label.</p>
 <td>132</td>
 <td>164</td>
 <td>31</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>10.40.182.3</td>
@@ -1680,6 +1688,7 @@ to predict the attack record label.</p>
 <td>46</td>
 <td>0</td>
 <td>0</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>59.166.0.5</td>
@@ -1692,6 +1701,7 @@ to predict the attack record label.</p>
 <td>146</td>
 <td>178</td>
 <td>31</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>59.166.0.7</td>
@@ -1704,6 +1714,20 @@ to predict the attack record label.</p>
 <td>132</td>
 <td>164</td>
 <td>31</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1736,6 +1760,7 @@ so we drop those columns.</p>
 <th>_c11</th>
 <th>_c12</th>
 <th>_c13</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1750,6 +1775,7 @@ so we drop those columns.</p>
 <td>0</td>
 <td>0</td>
 <td>dns</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>udp</td>
@@ -1762,6 +1788,7 @@ so we drop those columns.</p>
 <td>0</td>
 <td>0</td>
 <td>-</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>udp</td>
@@ -1774,6 +1801,7 @@ so we drop those columns.</p>
 <td>0</td>
 <td>0</td>
 <td>dns</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>udp</td>
@@ -1786,6 +1814,7 @@ so we drop those columns.</p>
 <td>0</td>
 <td>0</td>
 <td>dns</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>udp</td>
@@ -1798,6 +1827,7 @@ so we drop those columns.</p>
 <td>0</td>
 <td>0</td>
 <td>dns</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>udp</td>
@@ -1810,6 +1840,7 @@ so we drop those columns.</p>
 <td>0</td>
 <td>0</td>
 <td>-</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>udp</td>
@@ -1822,6 +1853,7 @@ so we drop those columns.</p>
 <td>0</td>
 <td>0</td>
 <td>dns</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>arp</td>
@@ -1834,6 +1866,7 @@ so we drop those columns.</p>
 <td>0</td>
 <td>0</td>
 <td>-</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>udp</td>
@@ -1846,6 +1879,7 @@ so we drop those columns.</p>
 <td>0</td>
 <td>0</td>
 <td>dns</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>udp</td>
@@ -1858,6 +1892,20 @@ so we drop those columns.</p>
 <td>0</td>
 <td>0</td>
 <td>dns</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1949,239 +1997,7 @@ null values in each column.</p>
 |                                            0|
 +---------------------------------------------+
 
-+---------------------------------------------+
-|count(CASE WHEN (_c11 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c12 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c14 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c15 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c16 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c17 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c18 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c19 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c20 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c21 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c22 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c23 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c24 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c25 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c26 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c27 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c28 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c29 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c30 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c31 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c32 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c33 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c34 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c35 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c36 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c37 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                      1348145|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c38 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                      1429879|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c39 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                      1429879|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c40 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c41 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c42 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c43 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c44 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c45 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c46 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+---------------------------------------------+
-|count(CASE WHEN (_c48 IS NULL) THEN true END)|
-+---------------------------------------------+
-|                                            0|
-+---------------------------------------------+
-
-+-------------------------------------------+
-|count(CASE WHEN (c4 IS NULL) THEN true END)|
-+-------------------------------------------+
-|                                          0|
-+-------------------------------------------+
-
-+-------------------------------------------+
-|count(CASE WHEN (c5 IS NULL) THEN true END)|
-+-------------------------------------------+
-|                                          0|
-+-------------------------------------------+
-
-+--------------------------------------------+
-|count(CASE WHEN (c13 IS NULL) THEN true END)|
-+--------------------------------------------+
-|                                           0|
-+--------------------------------------------+
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
