--- a/000_0-sds-3-x-projects/student-project-18_group-ProjectRL/02_Extensions.html
+++ b/000_0-sds-3-x-projects/student-project-18_group-ProjectRL/02_Extensions.html
@@ -1570,6 +1570,11 @@ in this dataset</p>
 <td>919.0</td>
 <td>4.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2082,6 +2087,11 @@ val movie_ID_genres = genre_df.select(&quot;movieId&quot;).rdd.map(r =&gt; r(0))
 <td>919.0</td>
 <td>4.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2154,6 +2164,11 @@ display(Ratings_genre_df)
 <td>1.0</td>
 <td>2294.0</td>
 <td>4.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
