--- a/000_0-sds-3-x-projects/student-project-19_group-Featuring/development/FundamentalMatrix_orig.html
+++ b/000_0-sds-3-x-projects/student-project-19_group-Featuring/development/FundamentalMatrix_orig.html
@@ -1534,6 +1534,11 @@ res0: Boolean = true
 <td>DSC_0010.JPG</td>
 <td>663710.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
