--- a/000_9-sds-3-x-trends/00a_FX1M.html
+++ b/000_9-sds-3-x-trends/00a_FX1M.html
@@ -1358,42 +1358,7 @@ exchange pair: gbpaud/
 exchange pair: gbpcad/
 exchange pair: gbpchf/
 exchange pair: gbpjpy/
-exchange pair: gbpnzd/
-exchange pair: gbpusd/
-exchange pair: grxeur/
-exchange pair: hkxhkd/
-exchange pair: jpxjpy/
-exchange pair: nsxusd/
-exchange pair: nzdcad/
-exchange pair: nzdchf/
-exchange pair: nzdjpy/
-exchange pair: nzdusd/
-exchange pair: sgdjpy/
-exchange pair: spxusd/
-exchange pair: udxusd/
-exchange pair: ukxgbp/
-exchange pair: usdcad/
-exchange pair: usdchf/
-exchange pair: usdczk/
-exchange pair: usddkk/
-exchange pair: usdhkd/
-exchange pair: usdhuf/
-exchange pair: usdjpy/
-exchange pair: usdmxn/
-exchange pair: usdnok/
-exchange pair: usdpln/
-exchange pair: usdsek/
-exchange pair: usdsgd/
-exchange pair: usdtry/
-exchange pair: usdzar/
-exchange pair: wtiusd/
-exchange pair: xagusd/
-exchange pair: xauaud/
-exchange pair: xauchf/
-exchange pair: xaueur/
-exchange pair: xaugbp/
-exchange pair: xauusd/
-exchange pair: zarjpy/
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
@@ -1437,10 +1402,7 @@ name: DAT_ASCII_BCOUSD_M1_202004.csv.gz, size: 245819
 name: DAT_ASCII_BCOUSD_M1_202004.txt.gz, size: 953
 name: DAT_ASCII_BCOUSD_M1_202005.csv.gz, size: 233828
 name: DAT_ASCII_BCOUSD_M1_202005.txt.gz, size: 850
-name: DAT_ASCII_BCOUSD_M1_202006.csv.gz, size: 244557
-name: DAT_ASCII_BCOUSD_M1_202006.txt.gz, size: 1394
-name: DAT_ASCII_BCOUSD_M1_202007.csv.gz, size: 74976
-name: DAT_ASCII_BCOUSD_M1_202007.txt.gz, size: 1637
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
@@ -1555,6 +1517,14 @@ val oilDS = spark.read.fx1m(oilPath).orderBy($&quot;time&quot;)
 <td>86.79</td>
 <td>86.81</td>
 <td>0.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
