--- a/000_9-sds-3-x-trends/00b_yfinance.html
+++ b/000_9-sds-3-x-trends/00b_yfinance.html
@@ -1643,6 +1643,16 @@ a Dataset in Scala Spark.</p>
 <td>255.1999969482422</td>
 <td>446.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
