--- a/000_9-sds-3-x-trends/030_Spark_GDELT_project_001.html
+++ b/000_9-sds-3-x-trends/030_Spark_GDELT_project_001.html
@@ -2030,6 +2030,13 @@ cameoCountry: org.apache.spark.sql.Dataset[com.aamend.spark.gdelt.CameoCode] = [
 <td>AR</td>
 <td>argentina</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2088,6 +2095,10 @@ cameoCountry: org.apache.spark.sql.Dataset[com.aamend.spark.gdelt.CameoCode] = [
 <tr class="even">
 <td>018</td>
 <td>make empathetic comment</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
