--- a/000_9-sds-3-x-trends/030a_gdelt_EOI_detection.html
+++ b/000_9-sds-3-x-trends/030a_gdelt_EOI_detection.html
@@ -1587,6 +1587,10 @@ val tot_cov_2018 = oil_gas_cov_norm.filter($&quot;date&quot; &gt;&quot;2018-01-0
 <td>2018-12-02</td>
 <td>15.359168150928163</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1691,6 +1695,14 @@ display(oil_gas_cov_norm.filter($&quot;date&quot; &gt;&quot;2018-01-01&quot; &am
 <td>16.126022134735287</td>
 <td>16.003087827280368</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -1794,6 +1806,14 @@ display(oil_gas_cov_norm.filter($&quot;date&quot; &gt;&quot;2018-01-01&quot; &am
 <td>7.219327161770644e-2</td>
 <td>11.139404582051062</td>
 <td>8.4196272615956</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
