--- a/000_9-sds-3-x-trends/03_streamable_trend_calculus_estimators.html
+++ b/000_9-sds-3-x-trends/03_streamable_trend_calculus_estimators.html
@@ -1845,6 +1845,11 @@ lossesDS: org.apache.spark.sql.Dataset[(Double, Long, String)] = [loss: double, 
 <td>4792058.0</td>
 <td>Oil and Gold</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
