--- a/000_0-sds-3-x-projects/student-project-03_group-GuangyiZhang/01_triads.html
+++ b/000_0-sds-3-x-projects/student-project-03_group-GuangyiZhang/01_triads.html
@@ -1395,44 +1395,7 @@ Saving to: ‘soc-sign-epinions.txt.gz’
   1000K .......... .......... .......... .......... .......... 36%  107M 0s
   1050K .......... .......... .......... .......... .......... 37%  121M 0s
   1100K .......... .......... .......... .......... .......... 39% 2.38M 0s
-  1150K .......... .......... .......... .......... .......... 41%  135M 0s
-  1200K .......... .......... .......... .......... .......... 43%  125M 0s
-  1250K .......... .......... .......... .......... .......... 44%  113M 0s
-  1300K .......... .......... .......... .......... .......... 46%  101M 0s
-  1350K .......... .......... .......... .......... .......... 48% 2.44M 0s
-  1400K .......... .......... .......... .......... .......... 49%  140M 0s
-  1450K .......... .......... .......... .......... .......... 51% 74.7M 0s
-  1500K .......... .......... .......... .......... .......... 53% 6.68M 0s
-  1550K .......... .......... .......... .......... .......... 55% 96.7M 0s
-  1600K .......... .......... .......... .......... .......... 56% 61.3M 0s
-  1650K .......... .......... .......... .......... .......... 58%  140M 0s
-  1700K .......... .......... .......... .......... .......... 60%  101M 0s
-  1750K .......... .......... .......... .......... .......... 62% 4.13M 0s
-  1800K .......... .......... .......... .......... .......... 63%  117M 0s
-  1850K .......... .......... .......... .......... .......... 65%  117M 0s
-  1900K .......... .......... .......... .......... .......... 67% 6.82M 0s
-  1950K .......... .......... .......... .......... .......... 68% 91.3M 0s
-  2000K .......... .......... .......... .......... .......... 70%  104M 0s
-  2050K .......... .......... .......... .......... .......... 72% 98.2M 0s
-  2100K .......... .......... .......... .......... .......... 74%  134M 0s
-  2150K .......... .......... .......... .......... .......... 75%  101M 0s
-  2200K .......... .......... .......... .......... .......... 77% 4.24M 0s
-  2250K .......... .......... .......... .......... .......... 79% 96.9M 0s
-  2300K .......... .......... .......... .......... .......... 80%  124M 0s
-  2350K .......... .......... .......... .......... .......... 82%  117M 0s
-  2400K .......... .......... .......... .......... .......... 84% 7.51M 0s
-  2450K .......... .......... .......... .......... .......... 86% 86.3M 0s
-  2500K .......... .......... .......... .......... .......... 87%  139M 0s
-  2550K .......... .......... .......... .......... .......... 89%  127M 0s
-  2600K .......... .......... .......... .......... .......... 91%  103M 0s
-  2650K .......... .......... .......... .......... .......... 93%  122M 0s
-  2700K .......... .......... .......... .......... .......... 94%  101M 0s
-  2750K .......... .......... .......... .......... .......... 96%  123M 0s
-  2800K .......... .......... .......... .......... .......... 98% 4.44M 0s
-  2850K .......... .......... .......... .......... .......... 99% 81.3M 0s
-  2900K ...                                                   100% 6035G=0.4s
-
-2020-11-24 16:15:45 (7.59 MB/s) - ‘soc-sign-epinions.txt.gz’ saved [2972840/2972840]
+output truncated to 30 lines...
 </pre></div>
 </div>
 </div>
@@ -1605,6 +1568,11 @@ mv: preserving permissions for ‘/dbfs/FileStore/epinions’: Operation not per
 <td>dbfs:/mnt/</td>
 <td>mnt/</td>
 <td>0.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
