--- a/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/05_Clustering.html
+++ b/000_0-sds-3-x-projects/student-project-12_group-CovidPandemic/05_Clustering.html
@@ -1316,6 +1316,7 @@
 <th>gdp_per_capita</th>
 <th>cardiovasc_death_rate</th>
 <th>diabetes_prevalence</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1330,6 +1331,7 @@
 <td>2705.406</td>
 <td>258.037</td>
 <td>6.05</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>THA</td>
@@ -1342,6 +1344,7 @@
 <td>16277.671</td>
 <td>109.861</td>
 <td>7.04</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>COM</td>
@@ -1354,6 +1357,7 @@
 <td>1413.89</td>
 <td>261.516</td>
 <td>11.88</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>DNK</td>
@@ -1366,6 +1370,7 @@
 <td>46682.515</td>
 <td>114.767</td>
 <td>6.41</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>EGY</td>
@@ -1378,6 +1383,7 @@
 <td>10550.206</td>
 <td>525.432</td>
 <td>17.31</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>KEN</td>
@@ -1390,6 +1396,7 @@
 <td>2993.028</td>
 <td>218.637</td>
 <td>2.92</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>GRC</td>
@@ -1402,6 +1409,7 @@
 <td>24574.382</td>
 <td>175.695</td>
 <td>4.55</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>BLR</td>
@@ -1414,6 +1422,7 @@
 <td>17167.967</td>
 <td>443.129</td>
 <td>5.18</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>CAN</td>
@@ -1426,6 +1435,7 @@
 <td>44017.591</td>
 <td>105.599</td>
 <td>7.37</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>PRY</td>
@@ -1438,6 +1448,20 @@
 <td>8827.01</td>
 <td>199.128</td>
 <td>8.27</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
@@ -1609,6 +1633,10 @@ display(df_clstr_filtered)
 <tr class="even">
 <td>DEU</td>
 <td>5.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
