--- a/000_0-sds-3-x-projects/student-project-18_group-ProjectRL/01_The_ALS_method.html
+++ b/000_0-sds-3-x-projects/student-project-18_group-ProjectRL/01_The_ALS_method.html
@@ -1702,6 +1702,12 @@ res35: Array[Unit] = Array((), (), (), (), (), (), (), (), (), ())
 <td>919.0</td>
 <td>4.0</td>
 </tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table></div></div>
 </div>
@@ -2145,6 +2151,11 @@ RatingsRDD: org.apache.spark.rdd.RDD[org.apache.spark.mllib.recommendation.Ratin
 <td>2238063.0</td>
 <td>1.0</td>
 <td>3.0</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
