--- a/000_9-sds-3-x-trends/01_trend_calculus_showcase.html
+++ b/000_9-sds-3-x-trends/01_trend_calculus_showcase.html
@@ -1396,6 +1396,7 @@ dfWithReversals: org.apache.spark.sql.DataFrame = [ticker: string, x: timestamp 
 <th>reversal5</th>
 <th>reversal6</th>
 <th>reversal7</th>
+<th>...</th>
 </tr>
 </thead>
 <tbody>
@@ -1410,6 +1411,7 @@ dfWithReversals: org.apache.spark.sql.DataFrame = [ticker: string, x: timestamp 
 <td>null</td>
 <td>null</td>
 <td>null</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>BCOUSD</td>
@@ -1422,6 +1424,7 @@ dfWithReversals: org.apache.spark.sql.DataFrame = [ticker: string, x: timestamp 
 <td>null</td>
 <td>null</td>
 <td>null</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>BCOUSD</td>
@@ -1434,6 +1437,7 @@ dfWithReversals: org.apache.spark.sql.DataFrame = [ticker: string, x: timestamp 
 <td>null</td>
 <td>null</td>
 <td>null</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>BCOUSD</td>
@@ -1446,6 +1450,7 @@ dfWithReversals: org.apache.spark.sql.DataFrame = [ticker: string, x: timestamp 
 <td>null</td>
 <td>null</td>
 <td>null</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>BCOUSD</td>
@@ -1458,6 +1463,7 @@ dfWithReversals: org.apache.spark.sql.DataFrame = [ticker: string, x: timestamp 
 <td>null</td>
 <td>null</td>
 <td>null</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>BCOUSD</td>
@@ -1470,6 +1476,7 @@ dfWithReversals: org.apache.spark.sql.DataFrame = [ticker: string, x: timestamp 
 <td>null</td>
 <td>null</td>
 <td>null</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>BCOUSD</td>
@@ -1482,6 +1489,7 @@ dfWithReversals: org.apache.spark.sql.DataFrame = [ticker: string, x: timestamp 
 <td>null</td>
 <td>null</td>
 <td>null</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>BCOUSD</td>
@@ -1494,6 +1502,7 @@ dfWithReversals: org.apache.spark.sql.DataFrame = [ticker: string, x: timestamp 
 <td>null</td>
 <td>null</td>
 <td>null</td>
+<td>...</td>
 </tr>
 <tr class="odd">
 <td>BCOUSD</td>
@@ -1506,6 +1515,7 @@ dfWithReversals: org.apache.spark.sql.DataFrame = [ticker: string, x: timestamp 
 <td>null</td>
 <td>null</td>
 <td>null</td>
+<td>...</td>
 </tr>
 <tr class="even">
 <td>BCOUSD</td>
@@ -1518,6 +1528,20 @@ dfWithReversals: org.apache.spark.sql.DataFrame = [ticker: string, x: timestamp 
 <td>null</td>
 <td>null</td>
 <td>null</td>
+<td>...</td>
+</tr>
+<tr class="odd">
+<td>...</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table></div></div>
